package com.you.lld.problems.linkedin.model;
public enum JobStatus { ACTIVE, CLOSED, ON_HOLD }