package com.you.lld.problems.linkedin.model;
public enum JobType { FULL_TIME, PART_TIME, CONTRACT, INTERNSHIP, REMOTE }