package com.you.lld.problems.linkedin.model;
public enum PostType { ARTICLE, STATUS_UPDATE, JOB_POSTING, POLL, VIDEO }