package com.you.lld.problems.linkedin.model;
public enum RequestStatus { PENDING, ACCEPTED, REJECTED }