classDiagram

    class LinkedInDemo {
        +main() static void
    }

    class InMemoryLinkedInService {
        -final Map~String,User~ users
        -final Map~String,Post~ posts
        -final Map~String,Job~ jobs
        -final Map~String,ConnectionRequest~ connectionRequests
        +registerUser() User
        +getUser() User
        +updateProfile() void
        +sendConnectionRequest() ConnectionRequest
        +acceptConnection() void
        +rejectConnection() void
        +getConnections() List~User~
        +getPendingRequests() List~ConnectionRequest~
        +follow() void
        +unfollow() void
    }

    class JobNotFoundException {
        -String message
        -Throwable cause
        +JobNotFoundException(message)
        +getMessage() String
    }

    class UserNotFoundException {
        -String message
        -Throwable cause
        +UserNotFoundException(message)
        +getMessage() String
    }

    class PostNotFoundException {
        -String message
        -Throwable cause
        +PostNotFoundException(message)
        +getMessage() String
    }

    class RequestNotFoundException {
        -String message
        -Throwable cause
        +RequestNotFoundException(message)
        +getMessage() String
    }

    class Post {
        -final String postId
        -final String authorId
        -String content
        -PostType type
        -List~String~ mediaUrls
        -Set~String~ likeUserIds
        -List~Comment~ comments
        -int shares
        -PostVisibility visibility
        -LocalDateTime createdAt
        +getPostId() String
        +getAuthorId() String
        +getContent() String
        +getType() PostType
        +getMediaUrls() List~String~
        +addMedia() void
        +getLikeUserIds() Set<String>
        +like() void
        +unlike() void
        +getLikesCount() int
    }

    class Skill {
        -final String name
        -int endorsements
        +getName() String
        +getEndorsements() int
        +endorse() void
    }

    class PostType {
        <<enumeration>>
        TEXT
        IMAGE
        VIDEO
        ARTICLE
        POLL
    }

    class ConnectionRequest {
        -final String requestId
        -final String senderId
        -final String receiverId
        -String message
        -RequestStatus status
        -LocalDateTime createdAt
        +getRequestId() String
        +getSenderId() String
        +getReceiverId() String
        +getMessage() String
        +setMessage() void
        +getStatus() RequestStatus
        +accept() void
        +reject() void
        +getCreatedAt() LocalDateTime
    }

    class Job {
        -final String jobId
        -final String companyId
        -String title
        -String description
        -String location
        -JobType type
        -String salaryRange
        -List~String~ requiredSkills
        -JobStatus status
        -LocalDateTime postedAt
        +getJobId() String
        +getCompanyId() String
        +getTitle() String
        +getDescription() String
        +setDescription() void
        +getLocation() String
        +setLocation() void
        +getType() JobType
        +setType() void
        +getSalaryRange() String
    }

    class User {
        -final String userId
        -String name
        -String email
        -String headline
        -String profilePicture
        -List~Experience~ experiences
        -List~Education~ educations
        -List~Skill~ skills
        -Set~String~ connectionIds
        -Set~String~ followerIds
        +getUserId() String
        +getName() String
        +setName() void
        +getEmail() String
        +getHeadline() String
        +setHeadline() void
        +getProfilePicture() String
        +setProfilePicture() void
        +getExperiences() List~Experience~
        +addExperience() void
    }

    class PostVisibility {
        <<enumeration>>
        PUBLIC
        CONNECTIONS
        PRIVATE
    }

    class Experience {
        -String title
        -String company
        -String location
        -LocalDate startDate
        -LocalDate endDate
        -String description
        -boolean current
        +getTitle() String
        +getCompany() String
        +getLocation() String
        +setLocation() void
        +getStartDate() LocalDate
        +setStartDate() void
        +getEndDate() LocalDate
        +setEndDate() void
        +getDescription() String
        +setDescription() void
    }

    class JobStatus {
        <<enumeration>>
        OPEN
        CLOSED
        FILLED
    }

    class JobType {
        <<enumeration>>
        FULL_TIME
        PART_TIME
        CONTRACT
        INTERNSHIP
    }

    class Comment {
        -final String commentId
        -final String postId
        -final String userId
        -String text
        -LocalDateTime createdAt
        +getCommentId() String
        +getPostId() String
        +getUserId() String
        +getText() String
        +getCreatedAt() LocalDateTime
    }

    class UserStatus {
        <<enumeration>>
        ACTIVE
        INACTIVE
        SUSPENDED
        DELETED
    }

    class Education {
        -String school
        -String degree
        -String fieldOfStudy
        -LocalDate startDate
        -LocalDate endDate
        -String grade
        +getSchool() String
        +getDegree() String
        +getFieldOfStudy() String
        +setFieldOfStudy() void
        +getStartDate() LocalDate
        +setStartDate() void
        +getEndDate() LocalDate
        +setEndDate() void
        +getGrade() String
        +setGrade() void
    }

    class RequestStatus {
        <<enumeration>>
        PENDING
        ACCEPTED
        REJECTED
    }

    class LinkedInService {
        <<interface>>
        +createPost(post) String
        +connect(userId, targetId) void
        +searchJobs(query) List~Job~
    }

    InMemoryLinkedInService "1" --> "*" User
    InMemoryLinkedInService "1" --> "*" Post
    InMemoryLinkedInService "1" --> "*" Job
    InMemoryLinkedInService "1" --> "*" ConnectionRequest
    InMemoryLinkedInService --> PostType
    InMemoryLinkedInService --> PostVisibility
    InMemoryLinkedInService --> Comment
    InMemoryLinkedInService --> Skill
    ConnectionRequest --> RequestStatus
    Comment --> Post
    Comment --> User
    Job --> JobType
    Job --> JobStatus
    User "1" --> "*" Experience
    User "1" --> "*" Education
    User "1" --> "*" Skill
    User --> UserStatus
    Post --> PostType
    Post "1" --> "*" Comment
    Post --> PostVisibility
